--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -90,10 +90,61 @@
                                 </div>
                             </ng-container>
                         </div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary me-2 my-1" data-bs-toggle="modal" [attr.data-bs-target]="'#'+player">
+                            Show card knowledge
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" style="overflow: hidden;" id={{player}} data-bs-keyboard="false" style="overflow-y: scroll;">
+                            <div class="modal-dialog modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                    </div>
+                                    <div class="modal-body row" style="height: 75vh; overflow-x: scroll; background-color: #e8f597 !important;">
+                                        <ng-container *ngFor = "let card of getCards(player); let i = index">
+                                            <div class="col-xl-4 col-12">
+                                                <div class="row flex-nowrap p-2">
+                                                    <div class="col-xl-4 col-3">
+                                                        <img class="img-responsive" src="assets/images/{{gameState.gameInfo.setOfColors[card.color - 1]}}{{card.rank}}.png">
+                                                    </div>
+                                                    <div class="col-xl-8 col-9">
+                                                        <p class="h5">Color knowledge:</p>
+                                                        <div class="d-flex flex-row">
+                                                            <ng-container *ngFor = "let color of card.colorKnowledge">
+                                                                <div class="d-flex flex-column">
+                                                                    <button [className]="getLgClassName(getColorName(color))" class=>
+                                                                        O
+                                                                    </button>
+                                                                </div>
+                                                            </ng-container>
+                                                        </div>
+                                                            <p class="h5">Rank knowledge:</p>
+                                                        <div class="d-flex flex-row">
+                                                            <ng-container *ngFor = "let rank of card.rankKnowledge">
+                                                                <div class="d-flex flex-column">
+                                                                    <button class="btn btn-primary me-1" style="pointer-events: none">
+                                                                        {{ rank }}
+                                                                    </button>
+                                                                </div>
+                                                            </ng-container>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </ng-container>
+                                    </div>
+                                <div class="modal-footer">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                         <ng-container *ngIf = "gameState?.currentPlayer === playerName">
                             <div class="btn-group">
                                 <div class="dropdown">
-                                    <button class="btn btn-primary dropdown-toggle me-2"  data-bs-toggle="dropdown">hint rank</button>
+                                    <button class="btn btn-primary dropdown-toggle me-2"  data-bs-toggle="dropdown">
+                                        hint rank
+                                    </button>
                                     <div class="dropdown-menu center-block">
                                         <ng-container *ngFor = "let rankName of ranks">
                                             <button class="dropdown-item" (click)="hintCard(player, 'rank', rankName)">
@@ -104,10 +155,12 @@
                                 </div>
                                 <div class="col">
                                     <div class="dropdown">
-                                        <button class="btn btn-primary dropdown-toggle me-2"  data-bs-toggle="dropdown">hint color</button>
+                                        <button class="btn btn-primary dropdown-toggle me-2"  data-bs-toggle="dropdown">
+                                            hint color
+                                        </button>
                                         <div class="dropdown-menu">
                                             <div class="btn-group btn-group-lg">
-                                                <ng-container *ngFor = "let colorName of getColorNames(); let i = index">
+                                                <ng-container *ngFor = "let colorName of getColorNamesForHint(); let i = index">
                                                     <button [className]="getClassName(colorName)" (click)="hintCard(player, 'color', i + 1)">
                                                         &#10003;
                                                     </button>
@@ -117,55 +170,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary my-1" data-bs-toggle="modal" [attr.data-bs-target]="'#'+player">
-                                Show card knowledge
-                            </button>
-                            <!-- Modal -->
-                            <div class="modal fade" style="overflow: hidden;" id={{player}} data-bs-keyboard="false" style="overflow-y: scroll;">
-                                <div class="modal-dialog modal-xl">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                        </div>
-                                        <div class="modal-body row" style="height: 75vh; overflow-x: scroll; background-color: #e8f597 !important;">
-                                            <ng-container *ngFor = "let card of getCards(player); let i = index">
-                                                <div class="col-xl-4 col-12">
-                                                    <div class="row flex-nowrap p-2">
-                                                        <div class="col-xl-4 col-3">
-                                                            <img class="img-responsive" src="assets/images/{{gameState.gameInfo.setOfColors[card.color - 1]}}{{card.rank}}.png">
-                                                        </div>
-                                                        <div class="col-xl-8 col-9">
-                                                            <p class="h5">Color knowledge:</p>
-                                                            <div class="d-flex flex-row">
-                                                                <ng-container *ngFor = "let color of card.colorKnowledge">
-                                                                    <div class="d-flex flex-column">
-                                                                        <button [className]="getLgClassName(getColorName(color))" class=>
-                                                                            O
-                                                                        </button>
-                                                                    </div>
-                                                                </ng-container>
-                                                            </div>
-                                                                <p class="h5">Rank knowledge:</p>
-                                                            <div class="d-flex flex-row">
-                                                                <ng-container *ngFor = "let rank of card.rankKnowledge">
-                                                                    <div class="d-flex flex-column">
-                                                                        <button class="btn btn-primary me-1" style="pointer-events: none">
-                                                                            {{ rank }}
-                                                                        </button>
-                                                                    </div>
-                                                                </ng-container>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </ng-container>
-                                        </div>
-                                    <div class="modal-footer">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         </ng-container>
                     </div>
                 </ng-container>
@@ -208,7 +212,7 @@
                                     <button class="btn btn-lg btn-primary me-3" (click)="playCard(card)">
                                         play
                                     </button>
-                                    <button class="btn btn-lg btn-primary me-3" (click)="discardCard(card)">
+                                    <button class="btn btn-lg btn-primary me-3" [disabled]="gameState.availableHints === gameState.gameInfo.maxHints" (click)="discardCard(card)">
                                         discard
                                     </button>
                                 </ng-container>
