--- a/src/app/components/mock-room/mock-room.component.html
+++ b/src/app/components/mock-room/mock-room.component.html
@@ -24,6 +24,7 @@
         </div>
     </div>
 </ng-container>
+
 <ng-container *ngIf = "gameState !== undefined && gameState.end_of_game === false">
     <div class="site-header sticky-top bg-primary py-2">
         <div class="row">
@@ -86,7 +87,7 @@
                         <div class="row flex-nowrap gx-2 py-2">
                             <ng-container *ngFor = "let card of getCards(player); let i = index">
                                 <div class="col">
-                                    <img class="img-responsive" src="assets/images/{{gameState.gameInfo.setOfColors[card.color - 1]}}{{card.rank}}.png">
+                                    <img class="img-responsive" src="assets/images/{{card.color}}{{card.rank}}.png">
                                 </div>
                             </ng-container>
                         </div>
@@ -106,7 +107,7 @@
                                             <div class="col-xl-4 col-12">
                                                 <div class="row flex-nowrap p-2">
                                                     <div class="col-xl-4 col-3">
-                                                        <img class="img-responsive" src="assets/images/{{gameState.gameInfo.setOfColors[card.color - 1]}}{{card.rank}}.png">
+                                                        <img class="img-responsive" src="assets/images/{{card.color}}{{card.rank}}.png">
                                                     </div>
                                                     <div class="col-xl-8 col-9">
                                                         <p class="h5">Color knowledge:</p>
